databruce/static/databruce/css/new_style.css
/* ... */
/* set-header default color */
.set-header td {
    background-color: #717f8e !important;
    color: rgb(var(--primary-content)) !important;
}

/* set-header and songnum font weight */
.set-header span,
.songnum {
    font-weight: 500 !important;
}

/* set-header colors and badge colors */
.set-2-opener,
td .badge.bg-secondary {
    background-color: rgba(var(--secondary), 0.8) !important;
    color: rgb(var(--secondary-content)) !important;
}

.set-1-closer,
.main-set-closer {
    background-color: rgba(var(--accent), 0.8) !important;
    color: rgb(var(--accent-content)) !important;
}

.encore-opener,
.show-closer {
    background-color: rgba(var(--danger), 1) !important;
    color: rgb(var(--danger-content)) !important;
}

.set-header:is(.set-1, .show) td,
.show-opener,
td .badge.bg-primary,
.badge.show-opener {
    background-color: rgba(var(--primary), 0.8) !important;
    color: rgb(var(--primary-content)) !important;
}

.set-header.set-2 td {
    background-color: rgb(var(--secondary), 0.8) !important;
    color: rgb(var(--secondary-content)) !important;
}

.set-header.encore td {
    background-color: rgb(var(--danger), 1) !important;
    color: rgb(var(--primary-content)) !important;
}

/* event detail badge row padding */
.badge-row .btn-sm {
    padding-top: 0.1rem;
    padding-bottom: 0.1rem;
    padding-left: 0.4rem;
    padding-right: 0.4rem;
}

/* button icon */
.btn i {
    font-weight: 700 !important;
    /* display: inline-flex; */
    vertical-align: middle;
    padding: 0 !important;
    /* margin-top: auto !important;
    margin-bottom: auto !important; */
    font-size: var(--text-base);
}

/* have margin on all nav-pills except last */
.nav.nav-pills.nav-fill li:not(:last-child) {
    margin-right: 0.25rem !important;
}

/* edit button, shown only to admin and hover at bottom right */
#admin-btn {
    position: fixed;
    bottom: 60px;
    right: 30px;
    z-index: 9999;

    .btn {
        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
    }
}

div.dt-scroll-body {
    border-bottom-width: 0px !important;
}

